Pagina Hotel Praiano Fundamentos Web Html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body bgcolor="#36EEE0">
+    <ul>
+        <li>
+            <a href="index.html">Home</a>
+        </li> 
+        <li>
+            <a href="contato.html">Contato</a>
+        </li> 
+          
+    </ul>
     <div align="center">
         <h1>Hotel Praiano</h1>
         <h2>O CONFORTO DO HOTEL NA AREIA</h2>
