--- a/contato.html
+++ b/contato.html
@@ -24,18 +24,21 @@
             <h2>Mande uma mensagem</h2>
             <form>
                 <label for="nome">Nome:</label> <br>
-                <input type="text" id="nome">
-                <br>
+                <input type="text" id="nome"onkeyup="validaNome()">
+                <div id='txtNome'></div>
+                
                 <br>
                 <label for="email">E-mail:</label> <br>
-                <input type="email" id="email">
+                <input type="email" id="email" onkeyup='validaEmail()'>
+                <div id='txtEmail'></div>
                 <br>
                 <br>
                 <label for="assunto">Assunto:</label> <br>
-                <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                <div id='txtassunto'></div>
                 <br>
                 <br>
-                <button>Enviar</button>
+                <button onclick = "enviar()"> Enviar</button> 
             </form>
         
         </div>
@@ -47,7 +50,7 @@
     <p>Av. Conselheiro Carrão, 300 - Vila Carrao</p>
     <p>São Paulo - SP</p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.8382728483566!2d-46.5576505855436!3d-23.53831856662572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ef565cc0013%3A0xad2af2bac888127c!2sAv.%20Conselheiro%20Carr%C3%A3o%2C%20300%20-%20Vila%20Carrao%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2003402-000!5e0!3m2!1spt-BR!2sbr!4v1634913830525!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.8382728483566!2d-46.5576505855436!3d-23.53831856662572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ef565cc0013%3A0xad2af2bac888127c!2sAv.%20Conselheiro%20Carr%C3%A3o%2C%20300%20-%20Vila%20Carrao%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2003402-000!5e0!3m2!1spt-BR!2sbr!4v1634913830525!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" onmousedown="mapaZoom()" onmouseout="mapaNormal()" id ='mapa'></iframe>
         </div>
     </div>
 
@@ -72,6 +75,9 @@
    
         </p>
     </footer>
-  
+   
+    <script src="assets/js/script.js"></script>
+
 </body>
 </html>
+
